<resources>
    <string name="app_name">AndroidAssessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_placeholder">Username</string>
    <string name="email_placeholder">Email Address</string>
    <string name="fullname_placeholder">Full Name</string>
    <string name="address_placeholder">Address</string>
    <string name="company_placeholder">Company</string>
    <string name="website_placeholder">Website</string>
    <string name="copy_txt">(c) VFD Recruitment 2022</string>
</resources>